# asciimath-calculator

./: .gitignore  Makefile.am  README.md  configure.ac
src/: .gitignore  Makefile.am  am.y  asciimath-funcs.c  asciimath.h  asciimath.l  config.h.in
